--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -26,8 +27,9 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
-    "web-vitals": "^2.1.4",
-    "@babel/plugin-proposal-private-property-in-object":"^7.21.11"
+    "sweetalert2": "^11.10.4",
+    "sweetalert2-react-content": "^5.0.7",
+    "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
